<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dfe"
    android:orientation="vertical"
    tools:context=".AddToDoActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/hello"
        android:gravity="center"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/description3"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="17sp"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="@string/title_hint"
        android:gravity="start|top"
        android:padding="5dp"
        android:ems="5"
        android:id="@+id/title_edit"
        android:layout_marginTop="7dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:lines="1"
        android:maxLines="1"
        android:maxLength="30"
        android:background="#dcdcdc" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note"
        android:textSize="17sp"
        android:layout_marginTop="30dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="@string/note_hint"
        android:gravity="start|top"
        android:padding="8dp"
        android:ems="10"
        android:id="@+id/note_edit"
        android:layout_marginTop="7dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:lines="10"
        android:maxLength="100"
        android:background="#dcdcdc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:weightSum="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/add_b"
            android:layout_weight="0.5"
            android:layout_marginStart="15dp"
            android:text="@string/add"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/clear_b"
            android:layout_weight="0.5"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="15dp"
            android:text="@string/clear"/>
    </LinearLayout>

</LinearLayout>