<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#dfe"
    tools:context=".DetailContentActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/hello"
        android:textSize="25sp"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="17sp"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:gravity="start|top"
        android:padding="5dp"
        android:ems="5"
        android:id="@+id/title_d"
        android:layout_marginTop="7dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:lines="1"
        android:maxLines="1"
        android:maxLength="30"
        android:background="#dcdcdc" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note"
        android:textSize="17sp"
        android:layout_marginTop="30dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:gravity="start|top"
        android:padding="8dp"
        android:ems="10"
        android:id="@+id/note_d"
        android:layout_marginTop="7dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:lines="10"
        android:maxLength="100"
        android:background="#dcdcdc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="right"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal"
        tools:ignore="RtlHardcoded">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_d"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/date_d"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:weightSum="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/update_b"
            android:layout_weight="0.5"
            android:layout_marginStart="15dp"
            android:text="@string/update_d"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/clear_b"
            android:layout_weight="0.5"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="15dp"
            android:text="@string/clear"/>

    </LinearLayout>

</LinearLayout>